name:                Gomoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Gomoku#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          irmina.krysiak@gmail.com
copyright:           2017 Irmina Krysiak
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, containers, parallel
  default-language:    Haskell2010

executable Gomoku-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers
                     , Gomoku, parallel
  default-language:    Haskell2010

test-suite Gomoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , Gomoku, parallel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/irmikrys/Gomoku
